# tabs.kak

./: .gitignore  .rustfmt.toml  Cargo.toml  default.nix  flake.nix  readme.md  todo.md
csrc/: tabs.c
gosrc/: go.mod  tabs.go
rc/: buffers.kak  tabs.kak
src/: Makefile  args.rs  buffers.rs  ext.rs  kakoune.rs  main.rs  tabs.c  tabs.rs  utils.rs
